--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -11,6 +11,9 @@ project(app LANGUAGES C)
 
 zephyr_include_directories(src)
 
-target_sources(app PRIVATE src/main.c)
-target_sources(app PRIVATE src/miniproj_fsm)
+target_sources(app PRIVATE
+    src/main.c
+    src/miniproj_fsm.c
+)
+
 
