--- a/app/prj.conf
+++ b/app/prj.conf
@@ -6,3 +6,7 @@
 CONFIG_GPIO=y
 CONFIG_PWM=y
 CONFIG_SMF=y
+CONFIG_BT=y
+CONFIG_BT_HCI=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="6493 EiE BLE Peripheral"
